cust-one/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: daemon-set-app-two
  name: daemon-set-app-two
  namespace: cust-one
spec:
  selector:
    matchLabels:
      app: daemon-set-app-two
  template:
    metadata:
      labels:
        app: daemon-set-app-two
    spec:
      containers:
      - image: nginx:1.22.1
        name: nginx
        resources:
          requests:
            cpu: 0.125
            memory: 128Mi
          limits:
            cpu: 0.25
            memory: 256Mi
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - name: index-html
            mountPath: /usr/share/nginx/html
      volumes:
        - name: index-html
          configMap:
            name: config-map-app-two
            items:
              - key: index.html
                path: index.html
