cust-one/service-app-two.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: daemon-set-app-two
  name: app-two-svc
  namespace: cust-one
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: daemon-set-app-two
  type: NodePort
