cust-one/ingress-app-two.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules-app-two
  namespace: cust-one
spec:
  ingressClassName: nginx
  rules:
    - host: another-site.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-two-svc
                port:
                  number: 80
